# videogestalt

./: .gitignore  MANIFEST.in  Makefile  README.md  generate.py  generate.sh  gestalt.py  pyproject.toml  requirements.txt
.github/workflows/: ci-build.yml  ci-cd.yml
resources/: videogestalt_logo.txt
src/gestalt/: gestalt.py
src/videogestalt/: videogestalt.py
tests/: test_videogestalt.py
