# SPDX-License-Identifier: MPL-2.0

[build-system]
# never uppercap requirements unless we have evidence it won't work https://iscinumpy.dev/post/bound-version-constraints/ 
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]  # beware if using setuptools: setup.py still gets executed, and even if pyproject.toml fields take precedence, if there is any code error in setup.py, building will fail!
name = "videogestalt"
version = "0.2.0"  # see PEP 440 https://peps.python.org/pep-0440/#pre-releases and https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
description = "Regular Expression Path Matcher - Easily batch manipulate folders and files trees with regular expression!"
authors = [
    {name = "Eamonn O'Brien-Strain"},
    ]
maintainers = [
    {name = "Eamonn O'Brien-Strain"},
    {name = "Stephen Karl Larroque", email = "lrq3000@gmail.com"},
    ]
requires-python = ">=3.7"
license = {text = "Mozilla Public License 2.0"} # { file = "LICENSE" }
keywords = ["video", "gestalt", "movie", "summary", "summarization", "thumbnails"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Multimedia :: Video',
    'Topic :: Multimedia :: Video :: Display',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]
dependencies = [
    "moviepy",
]

[project.urls]
Homepage = "https://github.com/eobrain/videogestalt"
Documentation = "https://github.com/eobrain/videogestalt/blob/master/README.md"
"Source" = "https://github.com/eobrain/videogestalt"
Tracker = "https://github.com/eobrain/videogestalt/issues"
Download = "https://github.com/eobrain/videogestalt/releases"
#Changelog = "https://url/changelog"

[project.optional-dependencies]
testmeta = [  # dependencies to test meta-data
    "build",
    "twine",
    "validate-pyproject",
    "rstcheck",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
videogestalt = "videogestalt.videogestalt:main_entry"

#[tool.setuptools]
#package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# IMPORTANT: systematically delete `src/<project.name>.egg-info` folder before rebuilding, otherwise the list of included files will not get updated (it's in `SOURCES.txt` file in this folder)
where = ["src"]
include = ["videogestalt*"]
#namespaces = true  # already the default

[tool.setuptools.package-data]
# Check the <mypkg>.egg-info/SOURCES.txt file generated after a `build` or `pip install` to check if the following files are correctly included in the sdist.
# Check also the list of files included by default: https://packaging.python.org/en/latest/guides/using-manifest-in/
"*" = [
    "LICENSE*",
    "README*",
]
